@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<object name="portal_skins">
+<object name="portal_skins" default_skin="Sunburst Theme">
 
  <object name="classic_styles" remove="True" />
  <skin-path name="Plone Classic Theme" remove="True" />
